# actix-casbin-auth

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
examples/: rbac_restful_keymatch2_model.conf  rbac_restful_keymatch2_policy.csv  rbac_with_domains_model.conf  rbac_with_domains_policy.csv  rbac_with_pattern_policy.csv
src/: lib.rs  middleware.rs
tests/: test_middleware.rs  test_middleware_domain.rs  test_set_enforcer.rs
