[package]
name = "actix-casbin-auth"
version = "0.4.4"
authors = ["Eason Chai <hackerchai.com@gmail.com>","Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Casbin actix-web access control middleware"
homepage= "https://github.com/casbin-rs/actix-casbin-auth"
readme= "README.md"

[lib]
name = "actix_casbin_auth"
path = "src/lib.rs"

[dependencies]
casbin = { version = "2.0.6", default-features = false, features = ["incremental", "cached"] }
tokio = { version = "1.5.0", default-features = false, optional = true }
async-std = { version = "1.9.0", default-features = false, optional = true }
actix-web = { version = "4.0.0-beta.6", default-features = false }
actix-service = "2.0.0"
futures = "0.3"

[features]
default = ["runtime-tokio"]

runtime-tokio = ["casbin/runtime-tokio", "tokio/sync"]
runtime-async-std = ["casbin/runtime-async-std", "async-std/std"]

[dev-dependencies]
tokio = { version = "1.5.0", features = [ "full" ] }
async-std = { version = "1.9.0", features = [ "attributes" ] }
actix-rt = "2.2.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"